Fix Sonar issues and IDE suggestions
Sonar issues fixed.
IDE suggestions fixed.

Issue-ID: INT-193
Change-Id: I34c35cdbb02d429a4f775efd6c669db5c581faa3
Signed-off-by: aravind.est <aravindhan.a@est.tech>